# auto-complete-snippet

./: Cargo.toml
src/: lib.rs
