[package]
name = "auto-complete-snippet"
version = "0.1.0"
authors = ["DrJupiter <klausjupiter@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.regex]
version = "1.3.7"


[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
